// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List uss files handler should return correct files if the file name pattern is specified. 1`] = `
Array [
  Object {
    "name": "ds1",
  },
  Object {
    "name": "ds2",
  },
]
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 2`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [
    Object {
      "name": "ds1",
    },
    Object {
      "name": "ds2",
    },
  ],
}
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 3`] = `
Array [
  Object {
    "name": "ds1",
  },
  Object {
    "name": "dt1",
  },
]
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 4`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [
    Object {
      "name": "ds1",
    },
    Object {
      "name": "dt1",
    },
  ],
}
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 5`] = `
Array [
  Object {
    "name": "ds2",
  },
  Object {
    "name": "dt2",
  },
]
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 6`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [
    Object {
      "name": "ds2",
    },
    Object {
      "name": "dt2",
    },
  ],
}
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 7`] = `
Array [
  Object {
    "name": "ds1",
  },
  Object {
    "name": "ds2",
  },
  Object {
    "name": "dt1",
  },
  Object {
    "name": "dt2",
  },
]
`;

exports[`List uss files handler should return correct files if the file name pattern is specified. 8`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [
    Object {
      "name": "ds1",
    },
    Object {
      "name": "ds2",
    },
    Object {
      "name": "dt1",
    },
    Object {
      "name": "dt2",
    },
  ],
}
`;

exports[`List uss files handler should return correct message if the uss file is found. 1`] = `
Array [
  Object {
    "name": "ds1",
  },
  Object {
    "name": "ds2",
  },
]
`;

exports[`List uss files handler should return correct message if the uss file is found. 2`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [
    Object {
      "name": "ds1",
    },
    Object {
      "name": "ds2",
    },
  ],
}
`;

exports[`List uss files handler should return no uss file if the uss file is not found. 1`] = `Array []`;

exports[`List uss files handler should return no uss file if the uss file is not found. 2`] = `
Object {
  "fields": Array [
    "name",
    "size",
    "owner",
    "group",
    "permissions",
  ],
  "format": "table",
  "output": Array [],
}
`;
